[package]
name = "relayserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.156"
plist = "1.7.0"
reqwest = { version = "0.12.5", features = ["rustls-tls"] }
serde = { version = "1.0.208", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
base64 = "0.21.2"
backon = "0.4.4"
futures = "0.3.30"
tokio-tungstenite = { version = "0.23.1", features = ["rustls-tls-webpki-roots"] }
serde_json = "1.0.125"
nix = { version = "0.29.0", features = ["feature"] }


[build-dependencies]
cc = "1.0"


